# loom-client

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_MAP.md  README.md  check.sh
core/: CMakeLists.txt
core/include/loom/core/: session.hpp  video_receiver.hpp
core/src/: placeholder.cpp  session.cpp  video_receiver.cpp
proto/: CMakeLists.txt
proto/include/loom/proto/: cbor.hpp  clocksync.hpp  control.hpp  datagram.hpp  errors.hpp  hex.hpp  keymap.hpp  reassembly.hpp  result.hpp
proto/src/: cbor.cpp  clocksync.cpp  control.cpp  datagram.cpp  keymap.cpp  placeholder.cpp  reassembly.cpp  vector_adapter.cpp
quest/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
quest-spatial/: build.gradle.kts  settings.gradle.kts
quest-spatial/app/: build.gradle.kts
quest-spatial/app/src/main/: AndroidManifest.xml
quest-spatial/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
quest-spatial/app/src/main/java/com/loom/spatial/: DesktopPanel.kt  DisplayWindowActivity.kt  NativeBridge.kt  PancakeActivity.kt  SpatialActivity.kt
quest-spatial/app/src/main/res/values/: ids.xml  themes.xml
quest-spatial/gradle/: libs.versions.toml
quest/kotlin/com/loom/quest/: LoomActivity.kt
quest/scripts/: build-msquic-android.sh
quest/src/: au_splitter.cpp  au_splitter.hpp  egl_context.cpp  egl_context.hpp  gl_scene.cpp  gl_scene.hpp  hevc_decoder.cpp  hevc_decoder.hpp  log.hpp  main.cpp  net_session.cpp  net_session.hpp  overlay.cpp  overlay.hpp  quic_transport.cpp  quic_transport.hpp  surface_texture.cpp  surface_texture.hpp  xr_app.cpp  xr_app.hpp
scripts/: demo.sh
sdl/: CMakeLists.txt
sdl/src/: clock.hpp  decoder.cpp  decoder.hpp  main.cpp  metrics.hpp  msquic_transport.cpp  msquic_transport.hpp  renderer.cpp  renderer.hpp  transport.hpp  video_pipeline.cpp  video_pipeline.hpp
sdl/tests/: idr_fixture.hpp  latency_test.cpp
tests/: CMakeLists.txt  cbor_test.cpp  clocksync_test.cpp  control_test.cpp  datagram_test.cpp  hex_util.hpp  keymap_test.cpp  reassembly_test.cpp  session_test.cpp  smoke_test.cpp  video_receiver_test.cpp
